--- a/www/httpdocs/workspace/themes/active/tmp-layouts/event.html
+++ b/www/httpdocs/workspace/themes/active/tmp-layouts/event.html
@@ -234,6 +234,11 @@
     </ul>
   </div>
   <div class="span2">
+    <h6>Main services</h6>
+    <p>Saturday evening at 6:00 pm </p>
+    <p>Sunday morning at 8:30 and 11:00 am</p>
+    <p>Wednesday evening at 7:00 pm</p>
+
     <h6>Online Giving</h6>
     <p>Athey Creek Christian Fellowship is supported solely through those who call Athey Creek their church home.</p>
     <p><a href="#" class="btn btn-primary">Give Online</a></p>
